--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div class="container">
+            <h1>Spiagge brasiliane</h1>
             <div class="arrow-prev">
                 <i class="fas fa-chevron-left"></i>
             </div>
@@ -21,6 +22,14 @@
             </div>
             <div class="arrow-next">
                 <i class="fas fa-chevron-right"></i>
+            </div>
+            <div class="circle">
+                <span><i class=" active fas fa-circle"></i></span>
+                <span><i class="fas fa-circle"></i></span>
+                <span><i class="fas fa-circle"></i></span>
+                <span><i class="fas fa-circle"></i></span>
+                <span><i class="fas fa-circle"></i></span>
+
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
