--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Spiagge brasiliane</h1>
+            <h1>Voglia di mare</h1>
             <div class="arrow-prev">
                 <i class="fas fa-chevron-left"></i>
             </div>
@@ -23,8 +23,8 @@
             <div class="arrow-next">
                 <i class="fas fa-chevron-right"></i>
             </div>
-            <div class="circle">
-                <span><i class=" active fas fa-circle"></i></span>
+            <div class="dots">
+                <span><i class=" fas fa-circle active"></i></span>
                 <span><i class="fas fa-circle"></i></span>
                 <span><i class="fas fa-circle"></i></span>
                 <span><i class="fas fa-circle"></i></span>
